--- a/Beerig_App/app/src/main/res/layout/activity_vodka.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_vodka.xml
@@ -28,7 +28,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="24dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/vodka"
         android:src="@drawable/back_main_button"
@@ -54,7 +54,9 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/app_name"
                 android:onClick="openVodkaCran"
@@ -64,7 +66,9 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/app_name"
                 android:onClick="openScrewdriver"
@@ -74,7 +78,9 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/app_name"
                 android:onClick="openVodkaBull"
@@ -83,7 +89,9 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/app_name"
                 android:onClick="openVodkaTonic"
@@ -93,7 +101,9 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/app_name"
                 android:onClick="openSeabreeze"
@@ -102,7 +112,9 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/app_name"
                 android:onClick="openMadras"
@@ -111,7 +123,9 @@
             <ImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="24dp"
+                android:layout_marginRight="24dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/app_name"
                 android:onClick="openVodkaShot"
