--- a/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
@@ -41,18 +41,17 @@
         android:onClick="openPartyDialog"
         android:src="@drawable/party_button" />
 
-    <!-- **Running into issues with this ImageView**
-         **Won't Display Properly on Screen**
-    <ImageView
-        android:id="@+id/lime_and_dime"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/go_button"
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
+        android:clickable="true"
         android:contentDescription="@string/Start_Partying"
-        android:src="@drawable/lime_and_dime_para"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true"/>
-    -->
-
+        android:focusable="true"
+        android:onClick="goBack"
+        android:src="@drawable/back_button_party" />
 </RelativeLayout>
