added the status bar and made the countdown timer update to the dialog. Canceled all ability for user to exit the dialog until the time is over. Next steps will involve getting party modes dialog to work. Need to add pour times to drink objects so it will be easy to pass the time in

--- a/Beerig_App/app/src/main/res/layout/party_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/party_dialog.xml
@@ -89,4 +89,13 @@
 
     </LinearLayout>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="154dp"
+        android:layout_height="291dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:visibility="invisible"/>
+
 </RelativeLayout>
