Added Random Facts when pouring drink, need help making the facts appear randomly and putting them in the dialog

--- a/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
@@ -18,7 +18,7 @@
     <ImageView
         android:id="@+id/party_mode_description"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_below="@id/party_time_logo"
         android:background="@android:color/transparent"
         android:contentDescription="@string/Start_Partying"
