--- a/Beerig_App/app/src/main/res/layout/activity_vodka.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_vodka.xml
@@ -14,7 +14,6 @@
     tools:context=".VodkaActivity">
 
     <!-- *Row for "Vodka" Title* -->
-
     <ImageView
         android:id="@+id/vodka_screen_title"
         android:layout_width="match_parent"
@@ -22,6 +21,7 @@
         android:contentDescription="@string/rum"
         android:src="@drawable/vodka_title" />
 
+    <!-- back button -->
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,7 +36,7 @@
         android:focusable="true"
         android:onClick="goBack"/>
 
-    <!-- creates a horizontal scroll for users -->
+    <!-- Scroll view used to contain all drink buttons -->
     <HorizontalScrollView
         android:id="@+id/horizontal_vodka_scroll"
         android:layout_width="wrap_content"
@@ -44,12 +44,11 @@
         android:layout_below="@id/vodka_screen_title"
         android:layout_marginTop="8dp">
 
-        <!-- Table layout used to represent the drinks in a user friendly fashion -->
+        <!-- layout used to create a single parent for ScrollView -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-
 
             <ImageButton
                 android:layout_width="wrap_content"
