Fixed the way random fact displayed on the screen. Also fixed the countdown timer.

--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -98,9 +98,10 @@
         android:id="@+id/random_fact"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_margin="16dp"
+        android:layout_margin="32dp"
         android:visibility="invisible"
         android:textSize="28sp"
-        android:textColor="#FFFFFF"/>
+        android:textColor="#FFFFFF"
+        android:gravity="center"/>
 
 </RelativeLayout>
