--- a/Beerig_App/app/src/main/res/layout/party_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/party_dialog.xml
@@ -3,7 +3,9 @@
 @author Brady Murphy
 @version July 22, 2018
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/party_mode_dialogue"
@@ -44,15 +46,17 @@
                 android:gravity="center"
                 android:layout_gravity="center"/>
 
-            <TextView
-                android:id="@+id/drink_recipe"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:layout_marginTop="16dp"
-                android:layout_marginStart="32dp"
-                android:paddingBottom="8dp"/>
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/loading_anim"
+                android:layout_width="186dp"
+                android:layout_height="187dp"
+                android:layout_gravity="center"
+                android:foregroundGravity="center"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/gift_popup" />
+
+
 
         </LinearLayout>
     </ScrollView>
