--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -3,7 +3,9 @@
 @author Brady Murphy
 @version July 22, 2018
 -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/dialog_background">
@@ -91,17 +93,29 @@
 
     </LinearLayout>
 
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/loading_anim"
+        android:layout_width="186dp"
+        android:layout_height="187dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center"
+        android:foregroundGravity="center"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/dino_dance" />
+
     <!-- TextView used to display the random fact -->
     <TextView
+        android:id="@+id/random_fact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/random_fact"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:layout_margin="32dp"
-        android:visibility="invisible"
-        android:textSize="28sp"
+        android:layout_below="@id/loading_anim"
+        android:layout_marginTop="140dp"
+        android:textAlignment="center"
         android:textColor="#FFFFFF"
-        android:gravity="center"/>
+        android:textSize="28sp"
+        android:visibility="invisible" />
 
 </RelativeLayout>
