--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -110,10 +110,10 @@
         android:id="@+id/random_fact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/loading_anim"
-        android:layout_marginTop="140dp"
+        android:layout_below="@+id/loading_anim"
         android:textAlignment="center"
+        android:paddingTop="80dp"
+        android:layout_marginTop="80dp"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         android:visibility="invisible" />
