--- a/Beerig_App/app/src/main/res/layout/party_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/party_dialog.xml
@@ -99,8 +99,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/loading_anim"
         android:textAlignment="center"
-        android:paddingTop="90dp"
-        android:layout_marginTop="90dp"
+        android:paddingTop="95dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:layout_marginTop="95dp"
         android:textColor="#FFFFFF"
         android:textSize="28sp"
         android:visibility="invisible"/>
