--- a/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
@@ -30,6 +30,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:src="@drawable/setting_symbol"
+        android:layout_marginTop="16dp"
+        android:layout_marginRight="16dp"
         android:background="@null"
         android:onClick="openSettings"/>
 
