--- a/Beerig_App/app/src/main/res/layout/settings_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/settings_dialog.xml
@@ -23,7 +23,7 @@
 
     <!-- thank you from the beerig team -->
     <TextView
-        android:id="@+id/settings_description"
+        android:id="@+id/thank_you"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -32,6 +32,7 @@
         android:gravity="center"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
+        android:fontFamily="@font/baskvl"
         android:text="@string/thank_you"
         android:layout_below="@id/settings_title"/>
 
